--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
   },
+  "dependencies": {
+    "xstate": "^4.32.1"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
